# sheets-search-mcp

./: .env.example  .gitignore  .mcp.json  Dockerfile  FRAMING.md  README.md  pyproject.toml  render.yaml
sheets_search_mcp/: __main__.py  auth.py  bot.py  server.py  sheets.py
